Addressed SonarCloud issues